--- a/Resturants/Cell/VideosTHeaderView/VideosHeaderView.xib
+++ b/Resturants/Cell/VideosTHeaderView/VideosHeaderView.xib
@@ -6,6 +6,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -24,13 +25,18 @@
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="1N9-2t-5wh">
                     <rect key="frame" x="0.0" y="276" width="393" height="300"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Video 1" translatesAutoresizingMaskIntoConstraints="NO" id="3fQ-rc-ZCh">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YRO-U8-K6W">
                             <rect key="frame" x="0.0" y="0.0" width="393" height="220"/>
-                            <color key="backgroundColor" name="ColorBlack"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="220" id="L4I-TF-Rch"/>
+                                <constraint firstAttribute="height" constant="220" id="r4f-lN-usp"/>
                             </constraints>
-                        </imageView>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                    <real key="value" value="8"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KWp-Px-RGU">
                             <rect key="frame" x="0.0" y="220" width="393" height="80"/>
                             <subviews>
@@ -63,19 +69,39 @@
                         </view>
                     </subviews>
                 </stackView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lgv-Ag-SBX">
+                    <rect key="frame" x="176.66666666666666" y="366" width="40" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="40" id="QYD-Ki-Kre"/>
+                        <constraint firstAttribute="height" constant="40" id="pMa-rH-lNv"/>
+                    </constraints>
+                    <color key="tintColor" name="ColorYellow"/>
+                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                    <state key="normal" image="play.circle.fill" catalog="system">
+                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="22" scale="large" weight="regular"/>
+                    </state>
+                </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="Y24-WO-N9W"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="1N9-2t-5wh" firstAttribute="leading" secondItem="Y24-WO-N9W" secondAttribute="leading" id="CR4-MT-X2G"/>
                 <constraint firstAttribute="trailing" secondItem="1N9-2t-5wh" secondAttribute="trailing" id="K4Q-FB-6ko"/>
+                <constraint firstItem="Lgv-Ag-SBX" firstAttribute="centerY" secondItem="YRO-U8-K6W" secondAttribute="centerY" id="LVg-bI-kgo"/>
                 <constraint firstItem="1N9-2t-5wh" firstAttribute="centerY" secondItem="ld3-lH-pLP" secondAttribute="centerY" id="N4B-r8-jiQ"/>
+                <constraint firstItem="Lgv-Ag-SBX" firstAttribute="centerX" secondItem="YRO-U8-K6W" secondAttribute="centerX" id="TSK-uY-PIN"/>
             </constraints>
+            <connections>
+                <outlet property="btnPlay" destination="Lgv-Ag-SBX" id="Qvb-bl-jeC"/>
+                <outlet property="lblTitle" destination="DUh-Hp-IwQ" id="VFg-ZH-NAW"/>
+                <outlet property="lblViews" destination="Uzu-ZF-Sbk" id="juE-l8-dY8"/>
+                <outlet property="vwVideo" destination="YRO-U8-K6W" id="h37-Ep-GPK"/>
+            </connections>
             <point key="canvasLocation" x="480" y="467"/>
         </view>
     </objects>
     <resources>
-        <image name="Video 1" width="374" height="217"/>
+        <image name="play.circle.fill" catalog="system" width="128" height="123"/>
         <namedColor name="ColorBlack">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
@@ -85,5 +111,11 @@
         <namedColor name="ColorWhite">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <namedColor name="ColorYellow">
+            <color red="0.80392156862745101" green="0.86274509803921573" blue="0.22352941176470589" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
