--- a/Resturants/Cell/HastagCCell/HastagCCell.xib
+++ b/Resturants/Cell/HastagCCell/HastagCCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -41,8 +41,9 @@
                                         <constraints>
                                             <constraint firstAttribute="width" constant="20" id="Jfl-X2-o2M"/>
                                         </constraints>
+                                        <color key="tintColor" name="ColorLightGray"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                        <state key="normal" image="HastagRemove"/>
+                                        <state key="normal" image="multiply.circle.fill" catalog="system"/>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -84,7 +85,7 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="HastagRemove" width="11" height="11"/>
+        <image name="multiply.circle.fill" catalog="system" width="128" height="123"/>
         <namedColor name="ColorLightGray">
             <color red="0.63529411764705879" green="0.63529411764705879" blue="0.63529411764705879" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
