--- a/Resturants/Cell/LocationTCell/LocationTCell.xib
+++ b/Resturants/Cell/LocationTCell/LocationTCell.xib
@@ -17,51 +17,99 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="80" id="KGk-i7-Jjw" customClass="LocationTCell" customModule="Resturants" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tb3-t6-dVm">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="2D7-zO-Mcz">
-                                <rect key="frame" x="16" y="8" width="147" height="64"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="2D7-zO-Mcz">
+                                <rect key="frame" x="12" y="8" width="300" height="104"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Roccola Vista" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rf3-oG-Kjm">
-                                        <rect key="frame" x="0.0" y="0.0" width="147" height="20"/>
-                                        <fontDescription key="fontDescription" name="Inter-Regular" family="Inter" pointSize="16"/>
-                                        <color key="textColor" name="ColorWhite"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kista Galleria, 16491 Kista" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VFg-ge-SSL">
-                                        <rect key="frame" x="0.0" y="22" width="147" height="20"/>
-                                        <fontDescription key="fontDescription" name="Inter-Regular" family="Inter" pointSize="12"/>
-                                        <color key="textColor" name="ColorLightGray"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Opened" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PiX-zD-7Ux">
-                                        <rect key="frame" x="0.0" y="44" width="147" height="20"/>
-                                        <fontDescription key="fontDescription" name="Inter-Regular" family="Inter" pointSize="14"/>
-                                        <color key="textColor" name="ColorLightGreen"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="IOD-rJ-59D">
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="39"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Roccola Vista" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rf3-oG-Kjm">
+                                                <rect key="frame" x="0.0" y="0.0" width="300" height="22.333333333333332"/>
+                                                <fontDescription key="fontDescription" name="Inter-Regular" family="Inter" pointSize="16"/>
+                                                <color key="textColor" name="ColorWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Kista Galleria, 16491 Kista" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VFg-ge-SSL">
+                                                <rect key="frame" x="0.0" y="24.333333333333336" width="300" height="14.666666666666664"/>
+                                                <fontDescription key="fontDescription" name="Inter-Regular" family="Inter" pointSize="12"/>
+                                                <color key="textColor" name="ColorLightGray"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="SZa-hy-44Z">
+                                        <rect key="frame" x="0.0" y="43" width="300" height="17"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Opened" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PiX-zD-7Ux">
+                                                <rect key="frame" x="0.0" y="0.0" width="52.666666666666664" height="17"/>
+                                                <fontDescription key="fontDescription" name="Inter-Regular" family="Inter" pointSize="14"/>
+                                                <color key="textColor" name="ColorLightGreen"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="14 : 00 - 00 : 00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xuE-pg-eUG">
+                                                <rect key="frame" x="54.666666666666671" y="0.0" width="245.33333333333331" height="17"/>
+                                                <fontDescription key="fontDescription" name="Inter-Regular" family="Inter" pointSize="12"/>
+                                                <color key="textColor" name="ColorLightGray"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="VUC-je-qJt">
+                                        <rect key="frame" x="0.0" y="64" width="300" height="40"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YWN-68-Yza">
+                                                <rect key="frame" x="0.0" y="0.0" width="138" height="40"/>
+                                                <color key="backgroundColor" name="ColorLightGray"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="40" id="ziL-JR-kYh"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" title="Manage Information">
+                                                    <color key="titleColor" name="ColorWhite"/>
+                                                </state>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                        <real key="value" value="8"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fJW-9U-VbV">
+                                                <rect key="frame" x="162" y="0.0" width="138" height="40"/>
+                                                <color key="backgroundColor" name="ColorWhite"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="40" id="KCc-1r-hKa"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" title="Manage the Menu">
+                                                    <color key="titleColor" name="ColorBlack"/>
+                                                </state>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                        <real key="value" value="8"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="14 : 00 - 00 : 00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xuE-pg-eUG">
-                                <rect key="frame" x="221.33333333333334" y="57.333333333333336" width="90.666666666666657" height="14.666666666666664"/>
-                                <fontDescription key="fontDescription" name="Inter-Regular" family="Inter" pointSize="12"/>
-                                <color key="textColor" name="ColorLightGray"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" name="ColorBlack"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="2D7-zO-Mcz" secondAttribute="trailing" constant="8" id="DeU-yI-N1G"/>
                             <constraint firstAttribute="bottom" secondItem="2D7-zO-Mcz" secondAttribute="bottom" constant="8" id="Itb-xp-8DD"/>
-                            <constraint firstItem="2D7-zO-Mcz" firstAttribute="leading" secondItem="tb3-t6-dVm" secondAttribute="leading" constant="16" id="MLH-hr-3zc"/>
-                            <constraint firstAttribute="trailing" secondItem="xuE-pg-eUG" secondAttribute="trailing" constant="8" id="a9F-Cd-j7X"/>
-                            <constraint firstItem="xuE-pg-eUG" firstAttribute="bottom" secondItem="2D7-zO-Mcz" secondAttribute="bottom" id="ey8-rI-xMn"/>
+                            <constraint firstItem="2D7-zO-Mcz" firstAttribute="leading" secondItem="tb3-t6-dVm" secondAttribute="leading" constant="12" id="MLH-hr-3zc"/>
                             <constraint firstItem="2D7-zO-Mcz" firstAttribute="top" secondItem="tb3-t6-dVm" secondAttribute="top" constant="8" id="pix-AA-mja"/>
                         </constraints>
                     </view>
@@ -75,12 +123,14 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="btnManangeInfo" destination="YWN-68-Yza" id="Tjp-I5-00M"/>
                 <outlet property="lblLoc" destination="VFg-ge-SSL" id="gBm-va-35Q"/>
                 <outlet property="lblName" destination="rf3-oG-Kjm" id="8FQ-LY-2fc"/>
                 <outlet property="lblSchedule" destination="xuE-pg-eUG" id="STi-Yx-tbl"/>
                 <outlet property="lblStatus" destination="PiX-zD-7Ux" id="1nl-Rh-OD4"/>
+                <outlet property="stackBtns" destination="VUC-je-qJt" id="iDB-Th-ftE"/>
             </connections>
-            <point key="canvasLocation" x="-108.3969465648855" y="32.394366197183103"/>
+            <point key="canvasLocation" x="-49" y="35"/>
         </tableViewCell>
     </objects>
     <resources>
