--- a/Resturants/Cell/TagPeopleCCell/TagPeopleCCell.xib
+++ b/Resturants/Cell/TagPeopleCCell/TagPeopleCCell.xib
@@ -31,6 +31,11 @@
                                 <constraints>
                                     <constraint firstAttribute="width" constant="20" id="vYf-u2-khi"/>
                                 </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="12"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ENV-Wb-Zyk">
                                 <rect key="frame" x="26" y="0.0" width="355" height="46"/>
